--- a/notes/aob-sources.bib
+++ b/notes/aob-sources.bib
@@ -10,3 +10,16 @@ year={2005},
 month={Nov},
 pages={6479–88}
 }
+
+
+@article{Wang_2014, 
+title={Microbial Community Response to Chlorine Conversion in a Chloraminated Drinking Water Distribution System}, 
+volume={48}, 
+ISSN={0013-936X}, 
+DOI={10.1021/es502646d}, 
+number={18}, 
+journal={Environmental Science & Technology}, 
+author={Wang, Hong and Proctor, Caitlin and Edwards, Marc and Pryor, Marsha and Domingo, Jorge and Ryu, Hodon and Camper, Anne and Olson, Andrew and Pruden, Amy}, 
+year={2014}, 
+pages={10624–10633}
+}
